--- a/blogpost.html
+++ b/blogpost.html
@@ -4,7 +4,11 @@
 		<link rel="stylesheet" href="css/estilos.css" />
 	</head>
 	<body>
-		<h1>Aquí vamos a hacer un blog post</h1>
-		<p>Y éste es el párrafo de inicio</p>
+		<div id="container">
+			<div id="post">
+				<h1>Título del Blogpost</h1>
+				<p>Aquí va una algo super ultra mega irrelevante pero que sirve bien al curso de git y el uso de ramas.</p>
+			</div>
+		</div>
 	</body>
 </html>
