Estructura inicial de la cabecera

--- a/blogpost.html
+++ b/blogpost.html
@@ -6,6 +6,9 @@
 	<body>
 		<div id="container">
 			<div id="post">
+				<div id="cabecera">
+					Cabecera
+				</div>
 				<h1>Título del Blogpost</h1>
 				<p>Aquí va una algo super ultra mega irrelevante pero que sirve bien al curso de git y el uso de ramas.</p>
 			</div>
