--- a/blogpost.html
+++ b/blogpost.html
@@ -7,7 +7,8 @@
 		<div id="container">
 			<div id="post">
 				<div id="cabecera">
-					Cabecera
+					Marvelous Blog
+					<span id="tagline">Tu blog de confianza</span>
 				</div>
 				<h1>Título del Blogpost</h1>
 				<p>Aquí va una algo super ultra mega irrelevante pero que sirve bien al curso de git y el uso de ramas.</p>
