--- a/blogpost.html
+++ b/blogpost.html
@@ -8,6 +8,7 @@
 			<div id="post">
 				<h1>Título del Blogpost</h1>
 				<p>Aquí va una algo super ultra mega irrelevante pero que sirve bien al curso de git y el uso de ramas.</p>
+				<p>Otro nuevo parrafo par poder revisar las funciones de las ramas</p>
 			</div>
 		</div>
 	</body>
