--- a/blogpost.html
+++ b/blogpost.html
@@ -2,6 +2,7 @@
 	<head>
 		<title>El título del post</title>
 		<link rel="stylesheet" href="css/estilos.css" />
+		<meta charset="utf-8">
 	</head>
 	<body>
 		<div id="container">
