Modifiqué la cabecera y el color del texto

--- a/blogpost.html
+++ b/blogpost.html
@@ -8,7 +8,7 @@
 		<div id="container">
 			<div id="cabecera">
 				Marvelous Blog
-				<span id="tagline">Tu blog de confianza</span>
+				<span id="tagline">Tu blog de super profesional</span>
 			</div>
 			<div id="post">
 				<h1>Título del Blogpost</h1>
