Agregué suscripción, cambie la cabecera ultra mega master y puse todo azul

--- a/blogpost.html
+++ b/blogpost.html
@@ -8,12 +8,13 @@
 		<div id="container">
 			<div id="cabecera">
 				Marvelous Blog
-				<span id="tagline">Tu blog de confianza</span>
+				<span id="tagline">Tu blog de ultra mega master</span>
 			</div>
 			<div id="post">
 				<h1>Título del Blogpost</h1>
 				<p>Aquí va una algo super ultra mega irrelevante pero que sirve bien al curso de git y el uso de ramas.</p>
 				<p>Otro nuevo parrafo par poder revisar las funciones de las ramas</p>
+				<p>Suscríbete y dale like</p>
 			</div>
 		</div>
 	</body>
