--- a/blogpost.html
+++ b/blogpost.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<title>Bienvenido</title>
+		<title>Bienvenido al super Blog 2.0</title>
 		<link rel="stylesheet" href="css/estilos.css" />
 		<meta charset="utf-8">
 	</head>
